--- a/app/src/main/res/drawable/progress_circle.xml
+++ b/app/src/main/res/drawable/progress_circle.xml
@@ -5,7 +5,7 @@
             android:shape="ring"
             android:thicknessRatio="12"
             android:useLevel="false">
-            <solid android:color="#DDD"/>
+            <solid android:color="?attr/colorSecondaryContainer" />
         </shape>
     </item>
     <item>
@@ -16,7 +16,7 @@
                 android:shape="ring"
                 android:thicknessRatio="12"
                 android:useLevel="true">
-                <solid android:color="#BF2758"/>
+                <solid android:color="?attr/colorPrimary" />
             </shape>
         </rotate>
 
