--- a/app/src/main/res/layout/fragment_daily_calories.xml
+++ b/app/src/main/res/layout/fragment_daily_calories.xml
@@ -1,103 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.navigation.dailyCalories.DailyCaloriesFragment">
+    android:layout_marginBottom="80dp"
+    tools:context=".views.navigation.recipes.RecipesFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <View
+        android:id="@+id/rectangle_2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="640dp"
+        android:background="@drawable/circle_rect_256_radius"
+        android:backgroundTint="?attr/colorPrimary"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Calories"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/calories_percentage"
-            app:layout_constraintEnd_toEndOf="@+id/calories_percentage"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="@+id/calories_percentage"
-            app:layout_constraintTop_toTopOf="@+id/calories_percentage"
-            app:layout_constraintVertical_bias="0.281" />
+    <TextView
+        android:id="@+id/tv_text_track"
+        style="@style/Theme.NutriCatch.TextStyle.Headline.Medium.Bold"
+        android:layout_marginTop="64dp"
+        android:text="@string/track_your_calories"
+        android:textColor="?attr/colorOnPrimary"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/img_calendar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
+        android:textColor="?attr/colorOnPrimary"
+        app:layout_constraintBottom_toTopOf="@id/calories_card"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Sat, 02 Dec 2023" />
 
-        <TextView
-            android:id="@+id/tv_calories"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1122"
-            android:textColor="@color/black"
-            android:textSize="45dp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/calories_percentage"
-            app:layout_constraintStart_toStartOf="@+id/calories_percentage"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+    <TextView
+        android:id="@+id/tv_text_my_eating"
+        style="@style/Theme.NutriCatch.TextStyle.Headline.Medium.Bold"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/my_eating_history"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calories_card"
+        tools:ignoreViewBinding="true" />
 
-        <ProgressBar
+    <!-- TODO : Tambahkan customview untuk total kalori -->
+
+    <ImageButton
+        android:id="@+id/img_calendar"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/ic_calendar"
+        android:backgroundTint="?attr/colorOnPrimary"
+        android:contentDescription="@string/date_picker"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_text_track"
+        app:tint="?attr/colorControlNormal" />
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/calories_card"
+        android:layout_width="236dp"
+        android:layout_height="236dp"
+        android:elevation="4dp"
+        app:cardCornerRadius="256dp"
+        app:layout_constraintBottom_toBottomOf="@id/rectangle_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rectangle_2">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/calories_percentage"
-            android:layout_width="250dp"
-            android:layout_height="220dp"
-            android:layout_marginTop="130dp"
-            android:indeterminateOnly="false"
-            android:progressDrawable="@drawable/progress_circle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TableLayout
-            android:id="@+id/tableLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/calories_percentage"
-            app:layout_constraintEnd_toEndOf="@+id/calories_percentage"
-            app:layout_constraintHorizontal_bias="0.492"
-            app:layout_constraintStart_toStartOf="@+id/calories_percentage"
-            app:layout_constraintTop_toBottomOf="@+id/tv_calories"
-            app:layout_constraintVertical_bias="0.121">
-
-            <TableRow>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Goals : "
-                    android:textSize="20dp" />
-
-                <TextView
-                    android:id="@+id/tv_goals"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="2250"
-                    android:textSize="20dp" />
-            </TableRow>
-        </TableLayout>
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_16"
-            android:layout_marginTop="15dp"
-            android:text="Today Calories"
-            android:textColor="@color/black"
-            android:textSize="18dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.044"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calories_percentage" />
-
-        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="@dimen/margin_16"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9"
-            tools:listitem="@layout/today_calories_item" />
+            android:layout_height="match_parent"
+            android:layout_gravity="center">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+            <View
+                android:layout_width="236dp"
+                android:layout_height="236dp"
+                android:background="@drawable/circle_rect_256_radius"
+                android:backgroundTint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/calories"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/calories_percentage"
+                app:layout_constraintEnd_toEndOf="@+id/calories_percentage"
+                app:layout_constraintHorizontal_bias="0.496"
+                app:layout_constraintStart_toStartOf="@+id/calories_percentage"
+                app:layout_constraintTop_toTopOf="@+id/calories_percentage"
+                app:layout_constraintVertical_bias="0.281" />
+
+
+            <TextView
+                android:id="@+id/tv_calories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1122"
+                android:textColor="@color/black"
+                android:textSize="45sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/calories_percentage"
+                app:layout_constraintStart_toStartOf="@+id/calories_percentage"
+                app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+            <ProgressBar
+                android:layout_width="256dp"
+                android:layout_height="256dp"
+                android:indeterminateOnly="false"
+                android:indeterminateTint="?attr/colorSecondaryContainer"
+                android:progressDrawable="@drawable/progress_circle"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:max="100"
+                tools:progress="30" />
+
+
+            <TableLayout
+                android:id="@+id/tableLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                app:layout_constraintBottom_toBottomOf="@+id/calories_percentage"
+                app:layout_constraintEnd_toEndOf="@+id/calories_percentage"
+                app:layout_constraintHorizontal_bias="0.492"
+                app:layout_constraintStart_toStartOf="@+id/calories_percentage"
+                app:layout_constraintTop_toBottomOf="@+id/tv_calories"
+                app:layout_constraintVertical_bias="0.121">
+
+                <TableRow>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Goals "
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/tv_goals"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="2250"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                </TableRow>
+            </TableLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/margin_16"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_text_my_eating"
+        tools:listitem="@layout/today_calories_item" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
