--- a/app/src/main/res/layout/fragment_daily_calories.xml
+++ b/app/src/main/res/layout/fragment_daily_calories.xml
@@ -118,6 +118,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
             <ProgressBar
+                android:id="@+id/calories_progress"
                 android:layout_width="256dp"
                 android:layout_height="256dp"
                 android:indeterminateOnly="false"
