--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,5 +39,8 @@
     <style name="roundedCornersView">
         <item name="cornerSize">15%</item>
     </style>
+    <style name="circleView">
+        <item name="cornerSize">50%</item>
+    </style>
 
 </resources>
