--- a/app/src/main/res/drawable/ic_help.xml
+++ b/app/src/main/res/drawable/ic_help.xml
@@ -1,6 +1,4 @@
-<vector android:height="144dp" android:viewportHeight="32"
-    android:viewportWidth="32" android:width="144dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000" android:pathData="M16,2.672c-7.361,0 -13.328,5.967 -13.328,13.328s5.967,13.328 13.328,13.328 13.328,-5.967 13.328,-13.328c0,-7.361 -5.967,-13.328 -13.328,-13.328zM16,28.262c-6.761,0 -12.262,-5.5 -12.262,-12.262s5.5,-12.262 12.262,-12.262 12.262,5.5 12.262,12.262c0,6.761 -5.5,12.262 -12.262,12.262z"/>
-    <path android:fillColor="#000000" android:pathData="M15.955,9.013c-2.706,0 -4.217,1.672 -4.236,4.322h1.176c-0.037,-1.922 0.97,-3.332 3.005,-3.332 1.455,0 2.668,1.026 2.668,2.519 0,0.97 -0.523,1.754 -1.213,2.407 -1.418,1.316 -1.815,1.935 -1.887,3.738h1.191c0.07,-1.635 0.034,-1.602 1.461,-3.029 0.952,-0.896 1.623,-1.792 1.623,-3.173 0,-2.164 -1.717,-3.452 -3.787,-3.452z"/>
-    <path android:fillColor="#000000" android:pathData="M16,20.799c-0.588,0 -1.066,0.477 -1.066,1.066 0,0.589 0.478,1.066 1.066,1.066s1.066,-0.477 1.066,-1.066c0,-0.588 -0.477,-1.066 -1.066,-1.066z"/>
+<vector android:height="128dp" android:viewportHeight="24"
+    android:viewportWidth="24" android:width="128dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#080341" android:fillType="evenOdd" android:pathData="M12,19.5C16.142,19.5 19.5,16.142 19.5,12C19.5,7.858 16.142,4.5 12,4.5C7.858,4.5 4.5,7.858 4.5,12C4.5,16.142 7.858,19.5 12,19.5ZM12,21C16.971,21 21,16.971 21,12C21,7.029 16.971,3 12,3C7.029,3 3,7.029 3,12C3,16.971 7.029,21 12,21ZM12.75,15V16.5H11.25V15H12.75ZM10.5,10.432C10.5,9.663 11.15,9 12,9C12.85,9 13.5,9.663 13.5,10.432C13.5,10.739 13.315,11.103 12.908,11.516C12.513,11.916 12.01,12.259 11.593,12.529L11.25,12.751V14.25H12.75V13.562C13.131,13.303 13.583,12.967 13.975,12.57C14.482,12.056 15,11.33 15,10.432C15,8.791 13.635,7.5 12,7.5C10.365,7.5 9,8.791 9,10.432H10.5Z"/>
 </vector>
