--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,6 +36,13 @@
         <item name="cornerRadius">5dp</item>
     </style>
 
+    <style name="ButtonStyle.Outlined" parent="ButtonStyle">
+        <item name="android:textColor">?attr/colorOnBackground</item>
+        <item name="backgroundTint">#fff</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="strokeColor">?attr/colorOutline</item>
+    </style>
+
     <style name="roundedCornersView">
         <item name="cornerSize">15%</item>
     </style>
