--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="24dp"
-    tools:context=".views.auth.LoginActivity">
+    tools:context=".views.navigation.auth.LoginActivity">
 
     <TextView
         android:id="@+id/textView"
