--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -56,6 +56,29 @@
                 app:layout_constraintBottom_toBottomOf="@id/ic_user"
                 app:layout_constraintStart_toEndOf="@id/ic_user"
                 app:layout_constraintTop_toBottomOf="@id/tv_user_name" />
+
+            <TextView
+                android:id="@+id/tv_diamond_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/rounded_corner_shape_4"
+                android:backgroundTint="?attr/colorPrimary"
+                android:paddingHorizontal="12dp"
+                android:text="0"
+                android:textColor="?attr/colorSurface"
+                app:layout_constraintBottom_toBottomOf="@id/img_diamond"
+                app:layout_constraintEnd_toStartOf="@id/img_diamond"
+                app:layout_constraintTop_toTopOf="@id/img_diamond"
+                tools:text="3" />
+
+            <ImageButton
+                android:id="@+id/img_diamond"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@drawable/ic_diamond_2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
@@ -96,9 +119,9 @@
             android:layout_height="256dp"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_food_recommendation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_food_recommendation"
             app:sliderAnimationDuration="600"
             app:sliderAutoCycleDirection="back_and_forth"
             app:sliderAutoCycleEnabled="true"
