--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -141,14 +141,35 @@
         android:text="@string/login"
         app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView" />
 
+    <TextView
+        android:id="@+id/tv_v_or"
+        style="@style/Theme.NutriCatch.TextStyle.Headline.Small"
+        android:layout_marginTop="8dp"
+        android:text="@string/or"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_login" />
+
+    <!--TODO tambahin icon googlenya, nama icon @drawable/ic_google-->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_login_with_google"
+        style="@style/ButtonStyle.Outlined"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/login_with_google"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_v_or" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/group_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="96dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_login_with_google">
 
         <TextView
             android:id="@+id/v_register"
