--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -43,10 +43,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_recipes_head"
-            tools:listitem="@layout/recipe_item" />
+            tools:listitem="@layout/recommendation_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
