--- a/app/src/main/res/layout/fragment_daily_calories.xml
+++ b/app/src/main/res/layout/fragment_daily_calories.xml
@@ -43,12 +43,11 @@
     <TextView
         android:id="@+id/tv_text_my_eating"
         style="@style/Theme.NutriCatch.TextStyle.Headline.Medium.Bold"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
         android:text="@string/my_eating_history"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calories_card"
-        tools:ignoreViewBinding="true" />
+        app:layout_constraintTop_toBottomOf="@+id/warning_tv"
+        tools:ignoreViewBinding="true"
+        android:layout_marginHorizontal="16dp"/>
 
     <!-- TODO : Tambahkan customview untuk total kalori -->
 
@@ -164,6 +163,20 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
+
+    <TextView
+        android:id="@+id/warning_tv"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:drawableStart="@drawable/baseline_warning_amber_24"
+        android:gravity="center"
+        android:text="You have exceed your daily calories intake"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/calories_card"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="10dp"
+        android:drawablePadding="10dp"
+        android:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
