--- a/app/src/main/res/layout/fragment_daily_calories.xml
+++ b/app/src/main/res/layout/fragment_daily_calories.xml
@@ -47,7 +47,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/warning_tv"
         tools:ignoreViewBinding="true"
-        android:layout_marginHorizontal="16dp"/>
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="10dp"/>
 
     <!-- TODO : Tambahkan customview untuk total kalori -->
 
@@ -168,15 +169,22 @@
         android:id="@+id/warning_tv"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:drawableStart="@drawable/baseline_warning_amber_24"
-        android:gravity="center"
-        android:text="You have exceed your daily calories intake"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/calories_card"
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="10dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_warning"
+        android:drawableStart="@drawable/baseline_warning_amber_24"
         android:drawablePadding="10dp"
-        android:visibility="gone"/>
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="You have exceed your daily calories intake"
+        android:textAlignment="center"
+        android:textColor="#FE9C28"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calories_card"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
