--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="24dp"
-    tools:context=".views.privacy.PrivacyFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ShareFragment"
+    android:paddingHorizontal="24dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="80dp">
+
 
         <ImageView
             android:id="@+id/btn_back"
@@ -24,25 +25,36 @@
         <TextView
             android:id="@+id/tv_headline"
             style="@style/Theme.NutriCatch.TextStyle.Headline.Medium.Bold"
-            android:text="@string/privacy_policy"
+            android:text="@string/share_nutricatch"
             app:layout_constraintBottom_toBottomOf="@id/btn_back"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            style="@style/TextAppearance.Material3.BodySmall"
+            android:id="@+id/textView10"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="80dp"
-            android:text="@string/privacy_policy_text"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:justificationMode="inter_word"
+            android:text="@string/share_nutricatch_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_headline"
-            android:justificationMode="inter_word"
-             />
+            app:layout_constraintTop_toBottomOf="@+id/tv_headline" />
 
+        <Button
+            android:id="@+id/shareButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            app:layout_constraintVertical_bias="0.109"
+            android:text="@string/share_nutricatch"
+            android:textStyle="bold"
+            style="@style/ButtonStyle"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
