--- a/app/src/main/res/layout/recommendation_item.xml
+++ b/app/src/main/res/layout/recommendation_item.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="256dp"
-    android:layout_margin="4dp"
-    tools:layout_width="200dp">
+    android:layout_height="205dp"
+    android:layout_marginVertical="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/img_recommendation"
+            android:id="@+id/img_recipe"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="40dp"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -22,33 +22,25 @@
             tools:src="@tools:sample/backgrounds/scenic" />
 
         <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="@drawable/circle_rect_256_radius"
-            android:backgroundTint="#fff"
-            android:gravity="center"
-            android:padding="8dp"
-            android:textStyle="bold"
+            android:id="@+id/tv_title"
+            style="@style/Theme.NutriCatch.TextStyle.Headline.Medium"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/img_recommendation"
-            tools:text="Potato Rebus" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/img_recipe"
+            tools:text="Title Recipe" />
 
         <TextView
-            android:id="@+id/tv_calories"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/circle_rect_256_radius"
-            android:backgroundTint="#fff"
-            android:paddingHorizontal="8dp"
-            android:paddingVertical="4dp"
-            app:layout_constraintStart_toStartOf="@id/img_recommendation"
-            app:layout_constraintTop_toTopOf="@id/img_recommendation"
-            tools:text="200 Kcal" />
+            android:id="@+id/tv_distance"
+            style="@style/Theme.NutriCatch.TextStyle.Headline.Small"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/img_recipe"
+            tools:text="20 m" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
