--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -46,7 +46,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_recipes_head"
-            tools:listitem="@layout/recommendation_item" />
+            tools:listitem="@layout/recipe_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
