--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -21,7 +21,7 @@
             tools:text="Food Title" />
 
         <TextView
-            android:id="@+id/tv_estimation_time"
+            android:id="@+id/tv_distance"
             style="@style/Theme.NutriCatch.TextStyle.Headline.Small"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
