--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -84,6 +84,9 @@
         <action
             android:id="@+id/action_navigation_profile_to_shareFragment"
             app:destination="@id/shareFragment" />
+        <action
+            android:id="@+id/action_navigation_profile_to_contactUsFragment"
+            app:destination="@id/contactUsFragment" />
     </fragment>
 
     <activity
@@ -156,7 +159,12 @@
         tools:layout="@layout/fragment_web_view_login" />
     <fragment
         android:id="@+id/shareFragment"
-        android:name="com.nutricatch.dev.ShareFragment"
+        android:name="com.nutricatch.dev.views.navigation.profile.ShareFragment"
         android:label="fragment_share"
         tools:layout="@layout/fragment_share" />
+    <fragment
+        android:id="@+id/contactUsFragment"
+        android:name="com.nutricatch.dev.views.navigation.profile.ContactUsFragment"
+        android:label="fragment_contact_us"
+        tools:layout="@layout/fragment_contact_us" />
 </navigation>
